--- a/Source/midori/data/error.html
+++ b/Source/midori/data/error.html
@@ -6,10 +6,102 @@
 <head>
 <title>{title}</title>
 {favicon}
-<link rel="stylesheet" type="text/css" href="res://about.css" />
+<!-- <link rel="stylesheet" type="text/css" href="res://about.css" /> -->
+<style>
+body {
+   background-color: #dedede;
+    color: #222222;
+    font-family: 'Open Sans', 'Droid Sans', Arial, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: normal;
+    margin-top: 100px;
+}
+
+html[dir="rtl"] #icon {
+    float: right;
+    padding-right: 1%;
+}
+
+.indent {
+    margin-left: 5%;
+}
+
+#main {
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 480px;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, .3);
+    padding: 25px;
+    -webkit-border-radius: 4px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    background-position-x: 22px;
+    background-position-y: 54px;
+}
+
+#text {
+    margin-left: 15%;
+}
+
+h1 {
+    font-family: 'Open Sans', 'Droid Sans', arial, sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 300;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+html[dir="ltr"] {
+   right: 15px;
+}
+
+html[dir="rtl"] {
+   left: 15px;
+}
+
+button span,
+button img {
+    vertical-align: middle;
+    padding: 2px 1px;
+}
+
+button {
+	font-size: 14px;
+}
+
+.message {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.description {
+    font-size: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#suggestions {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#button {
+    text-align: right;
+}
+
+form {
+	margin-bottom: 0px;
+}
+</style>
 </head>
 <body>
-<img id="logo" src="res://logo-shade.png" />
 <div id="main" style="background-image: url({error_icon});">
             <div id="text">
                 <h1>{title}</h1>
