ZRL customize for about:version

--- a/Source/midori/data/error.html
+++ b/Source/midori/data/error.html
@@ -1,6 +1,5 @@
 <!--
- Error page template for Midori.
- This file is licensed under the terms of the expat license, see the file EXPAT.
+ Error page template for Cuprum Browser.
 -->
 <html dir="{dir}">
 <head>
