ZRL customize about:version & speeddial

--- a/Source/BrowserApp/data/aboutversion.html
+++ b/Source/BrowserApp/data/aboutversion.html
@@ -58,13 +58,13 @@ body {
     <div id="outer">
       <div id="logo">
         <img src="data:image/png;base64,%s">
-        <div id="company" i18n-content="company">The Cuprum Authors</div>
+        <div id="company" i18n-content="company">The Browser Authors</div>
         <div id="copyright" i18n-content="copyright">版权所有2013-2014 核高基项目，桌面操作系统基础版。保留所有权利。</div>
       </div>
       <table id="inner" cellpadding="0" cellspacing="0" border="0">
-        <tbody><tr><td class="label" i18n-content="application_label">Cuprum浏览器</td>
+        <tbody><tr><td class="label" i18n-content="application_label">CDOS浏览器</td>
           <td class="version" id="version">
-              <span i18n-content="version">0.5.141202</span>
+              <span i18n-content="version">0.0.1</span>
           </td>
         </tr>
 <tr><td class="label" i18n-content="os_name">平台</td>
@@ -90,10 +90,10 @@ body {
           <td class="version" id="command_line" i18n-content="command_line">%s</td>
         </tr>
         <tr><td class="label" i18n-content="executable_path_name">可执行文件路径</td>
-          <td class="version" id="executable_path" i18n-content="executable_path">/usr/local/bin/cuprumbrowser</td>
+          <td class="version" id="executable_path" i18n-content="executable_path">/usr/local/bin/cdosbrowser</td>
         </tr>
         <tr><td class="label" i18n-content="profile_path_name">个人资料路径</td>
-          <td class="version" id="profile_path" i18n-content="profile_path">~/.config/cuprumbrowser</td>
+          <td class="version" id="profile_path" i18n-content="profile_path">~/.config/cdosbrowser</td>
         </tr>
         <tr><td class="label" i18n-content="profile_path_name">NetScape插件</td>
           <td class="version" id="netscape_plugin" i18n-content="profile_path">%s</td>
