--- a/Source/BrowserApp/data/speeddial-head.html
+++ b/Source/BrowserApp/data/speeddial-head.html
@@ -1,9 +1,6 @@
 <!--
- Speed Dial head template for Midori.
- Copyright (C) 2009 Jean-François Guchens <zcx000@gmail.com>
- Copyright (C) 2011 Paweł Forysiuk <tuxator@o2.pl>
- Copyright (C) 2011 Cassidy James <email@cassidyjames.com>
- This file is licensed under the terms of the expat license, see the file EXPAT.
+about:new & about:dial
+Created by ZRL 2014.12
 -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
