--- a/Source/BrowserApp/data/speeddial-head.html
+++ b/Source/BrowserApp/data/speeddial-head.html
@@ -37,9 +37,9 @@ Created by ZRL 2014.12
 
     #content {
         width: 96%;
-        height: 85%;
+        height: 90%;/*85%;*/
         margin: 0 auto;
-        padding-top: 5%;
+        padding-top: 2%;/*5%;*/
         padding-left: 2%;
     }
 
@@ -47,11 +47,12 @@ Created by ZRL 2014.12
         width: 25%;
         height: 33%;
         float: left;
+        margin-top: 7px;
     }
 
     div.shortcut .preview {
         width: 85%;
-        height: 75%;
+        height: 90%;/*75%;*/
         margin: auto;
         -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.3), 0 0 0px #fff inset;
         border: 1px solid #bcbcbc;
@@ -83,7 +84,7 @@ Created by ZRL 2014.12
 
     .title {
         text-align: center;
-        margin: 8px;
+        margin-top: 2px;/*8px;*/
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
