zgh 网站鉴定功能完成调试

--- a/Source/BrowserApp/data/websitequery/website_query_bg.html
+++ b/Source/BrowserApp/data/websitequery/website_query_bg.html
@@ -1,5 +1,9 @@
+<html>
+<head>
+<script src="jquery.js"></script>
+<script>
 (function getBeian() {
-var uri = 'http://www.beianbeian.com/search/baidu.com';
+var uri = '%s';
 console.log("js#uri:" + uri);
 
 var ajax = new XMLHttpRequest();
@@ -7,12 +11,14 @@ ajax.open("get", uri, false);
 function HandleStateChange() {
 console.log("onreadystatechange = " + ajax.readyState);
 if (ajax.readyState == 4){
+//console.log(ajax.responseText);
 var data = ajax.responseText;
 	var head = data.indexOf('#show_table td');
 	var dead_index = data.indexOf('没有符合条件的记录');
 	var source_code = data.substr(head+740, 1200);
    if (dead_index < 0 && (ajax.status == 200 || ajax.status == "200")) {
 		    console.log("get success");
+    console.log("get success" + source_code);
        var index1 = source_code.indexOf('<');
        var Organizer = source_code.substring(0, index1);
        source_code = source_code.substring(index1+92);
@@ -40,7 +46,6 @@ var data = ajax.responseText;
 			    console.log("website_query_info" + "#"  + "unknown");
 			    return;
 		    }
-
         console.log("website_query_info" + "#"  + Organizer +  "#" + nature + "#"  + license  + "#"  + sitename + "#"  + homepage + "#"  + checktime );
 	} else {  
 		console.log("website_query_info" + "#"  + "unknown");
@@ -50,6 +55,6 @@ var data = ajax.responseText;
 
 ajax.onreadystatechange= HandleStateChange;
 ajax.send();
-
-})();
-
+})();</script>
+</head>
+</html>
