--- a/Source/BrowserApp/data/websitequery/website_query_bg.html
+++ b/Source/BrowserApp/data/websitequery/website_query_bg.html
@@ -25,9 +25,11 @@ var data = ajax.responseText;
        source_code = source_code.substring(index1+157);
        index1 = source_code.indexOf('<');
        var license = source_code.substring(0, index1);
-       source_code = source_code.substring(index1+169);
+       source_code = source_code.substring(index1+168);
+//       console.log("source_code: " + source_code);
        index1 = source_code.indexOf('\n');
        var sitename = source_code.substring(0, index1-1);
+       console.log("sitename: " + sitename);
        index1 = source_code.indexOf('domain=');
        source_code = source_code.substring(index1+7);
        var index2 = source_code.indexOf('"');
