--- a/Source/BrowserApp/data/weather_inquiry/pop.html
+++ b/Source/BrowserApp/data/weather_inquiry/pop.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="all.css" />
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0"></script>
 <script src="jquery.js"></script>
 <script src="cif.js"></script>
 <script src="main.js"></script>
